--- a/package.json
+++ b/package.json
@@ -1,31 +1,34 @@
 {
-  "name": "restaurant",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@reduxjs/toolkit": "^2.3.0",
-    "axios": "^1.7.7",
-    "next": "14.2.15",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.53.0",
-    "react-icons": "^5.3.0",
-    "react-redux": "^9.1.2",
-    "react-router-dom": "^6.27.0",
-    "sass": "^1.80.1"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.15",
-    "typescript": "^5"
-  }
+	"name": "restaurant",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev --turbo",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@reduxjs/toolkit": "^2.3.0",
+		"axios": "^1.7.7",
+		"framer-motion": "^11.11.9",
+		"next": "14.2.15",
+		"react": "^18",
+		"react-dom": "^18",
+		"react-hook-form": "^7.53.0",
+		"react-icons": "^5.3.0",
+		"react-redux": "^9.1.2",
+		"react-router-dom": "^6.27.0",
+		"react-swipeable": "^7.0.1",
+		"sass": "^1.80.1",
+		"swiper": "^11.1.14"
+	},
+	"devDependencies": {
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"eslint": "^8",
+		"eslint-config-next": "14.2.15",
+		"typescript": "^5"
+	}
 }
