--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
 		"react-icons": "^5.3.0",
 		"react-redux": "^9.1.2",
 		"react-router-dom": "^6.27.0",
-		"react-swipeable": "^7.0.1",
-		"sass": "^1.80.1",
-		"swiper": "^11.1.14"
+		"sass": "^1.80.1"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
