--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 NEXT_PUBLIC_API_URL=http://13.60.191.239
+NEXT_PUBLIC_G_TOKEN=7222097072:AAHEt2RHUB02VF7GfRyheab8VeN5VDu0k2o
+NEXT_PUBLIC_CHAT_ID=-1002195927740
