--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
 		"react-dom": "^18",
 		"react-hook-form": "^7.53.0",
 		"react-icons": "^5.3.0",
+		"react-phone-input-2": "^2.15.1",
+		"react-phone-number-input": "^3.4.9",
 		"react-redux": "^9.1.2",
 		"react-router-dom": "^6.27.0",
+		"react-select": "^5.8.1",
+		"react-select-country-list": "^2.2.3",
 		"sass": "^1.80.1"
 	},
 	"devDependencies": {
