--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
 		"react-router-dom": "^6.27.0",
 		"react-select": "^5.8.1",
 		"react-select-country-list": "^2.2.3",
-		"sass": "^1.80.1"
+		"sass": "^1.80.1",
+		"swiper": "^11.1.14"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
